# ckanext-pslandak

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/pslandak/: cli.py  helpers.py  plugin.py  views.py
ckanext/pslandak/assets/: pslandak.css  pslandak.js  script.js  webassets.yml
ckanext/pslandak/logic/: action.py  auth.py  schema.py  validators.py
ckanext/pslandak/templates/: base.html  footer.html
ckanext/pslandak/templates/admin/: config.html
ckanext/pslandak/templates/home/: layout3.html
ckanext/pslandak/templates/home/snippets/: search.html
ckanext/pslandak/templates/package/: read.html
ckanext/pslandak/templates/package/snippets/: additional_info.html  metadata_info.html  package_metadata_fields.html
ckanext/pslandak/templates/snippets/: pslandak_custom_form_fields.html  pstheme_custom_form_fields.html
ckanext/pslandak/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/pslandak/tests/logic/: test_action.py  test_auth.py  test_validators.py
