[project]
name = "ckanext-pslandak"
version = "0.0.1"
description = "CKAN Theme For Open Data Landak"
readme = "README.md"
authors = [
    {name = "Eric Ariyanto", email = "mail@ericariyanto.com"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/ericariyanto/ckanext-pslandak"

[project.entry-points."ckan.plugins"]
pslandak = "ckanext.pslandak.plugin:PslandakPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
